--- a/docs/_layouts/noheader.html
+++ b/docs/_layouts/noheader.html
@@ -16,6 +16,13 @@
 
   <body>
     <div id="container">
+      <h2>{{ site.data.navbar.docs_list_title }}</h2>
+      <ul>
+        {% for item in site.data.navbar.docs %}
+        <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+        {% endfor %}
+      </ul>
+
       <div class="inner">
         <section id="main_content">
           {{ content }}
