retry con variabili YAML (utilizzo variabili in noheader.html)

--- a/docs/_layouts/noheader.html
+++ b/docs/_layouts/noheader.html
@@ -18,7 +18,7 @@
     <div id="container">
       <ul>
         {% for item in site.data.navbar.docs %}
-        <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+        <li><a href="{{ site.data.navbar.endpoint }}{{ item.url }}">{{ item.title }}</a></li>
         {% endfor %}
       </ul>
 
