--- a/docs/_layouts/noheader.html
+++ b/docs/_layouts/noheader.html
@@ -18,7 +18,16 @@
     <div id="container">
       <ul>
         {% for item in site.data.navbar.docs %}
+        {% if item.url %}
         <li><a href="{{ site.data.navbar.endpoint }}{{ item.url }}">{{ item.title }}</a></li>
+        {% else %}
+        <h3>{{ item.title }}</h3>
+        <ul>
+          {% for entry in item.subfolderitems %}
+          <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
+          {% endfor %}
+        </ul>
+        {% endif %}
         {% endfor %}
       </ul>
 
