--- a/docs/_layouts/noheader.html
+++ b/docs/_layouts/noheader.html
@@ -24,7 +24,7 @@
         <h3>{{ item.title }}</h3>
         <ul>
           {% for entry in item.subfolderitems %}
-          <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
+          <li><a href="{{ site.data.navbar.endpoint }}{{ entry.url }}">{{ entry.page }}</a></li>
           {% endfor %}
         </ul>
         {% endif %}
