--- a/docs/_layouts/noheader.html
+++ b/docs/_layouts/noheader.html
@@ -11,6 +11,8 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link ref="stylesheet" href="../css/style.css">
+
     {% seo %}
   </head>
 
@@ -21,12 +23,14 @@
         {% if item.url %}
         <li><a href="{{ site.data.navbar.endpoint }}{{ item.url }}">{{ item.title }}</a></li>
         {% else %}
-        <h3>{{ item.title }}</h3>
-        <ul>
-          {% for entry in item.subfolderitems %}
-          <li><a href="{{ site.data.navbar.endpoint }}{{ entry.url }}">{{ entry.page }}</a></li>
-          {% endfor %}
-        </ul>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">{{ item.title }}</a>
+          <div class="dropdown-content">
+            {% for entry in item.subfolderitems %}
+            <a href="{{ site.data.navbar.endpoint }}{{ entry.url }}">{{ entry.page }}</a>
+            {% endfor %}
+          </div>
+        </li>
         {% endif %}
         {% endfor %}
       </ul>
