--- a/docs/_layouts/noheader.html
+++ b/docs/_layouts/noheader.html
@@ -74,17 +74,17 @@
 
   <body>
     <div id="container">
-      <ul class=".navbar_">
+      <ul class="navbar_">
         {% for item in site.data.navbar.docs %}
         {% if item.url %}
-        <li class=".navbar_"><a class=".navbar_"
-            href="{{ site.data.navbar.endpoint }}{{ item.url }}">{{ item.title }}</a></li>
+        <li class="navbar_"><a class="navbar_" href="{{ site.data.navbar.endpoint }}{{ item.url }}">{{ item.title }}</a>
+        </li>
         {% else %}
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">{{ item.title }}</a>
           <div class="dropdown-content">
             {% for entry in item.subfolderitems %}
-            <a class=".navbar_" href="{{ site.data.navbar.endpoint }}{{ entry.url }}">{{ entry.page }}</a>
+            <a class="navbar_" href="{{ site.data.navbar.endpoint }}{{ entry.url }}">{{ entry.page }}</a>
             {% endfor %}
           </div>
         </li>
