--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,12 +4,12 @@
 @import "{{ site.theme }}";
 
 table {
-    display: block;
+    display: table;
     overflow: auto;
 }
 
 tbody {
-    display: block;
+    display: table;
 }
 
 thead, tbody tr {
