working on layout: noheader

--- a/docs/_layouts/noheader.html
+++ b/docs/_layouts/noheader.html
@@ -19,6 +19,10 @@
     </head>
 
     <body>
+        <header>
+            <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        </header>
+
         <div class="wrapper">
             <nav>
                 <ul></ul>
