--- a/docsite/_includes/head.html
+++ b/docsite/_includes/head.html
@@ -3,7 +3,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
   <!-- Importing javascript "global.js" file -->
-  <script type="module" src="./engine/js/global.js"></script>
+  <!-- src="/" is "andreagrandieri.github.io" -->
+  <!-- src="./" is the current folder path. Note that you can level up (walk backwards) using "../" -->
+  <script type="module" src="/MagicMirror-GBM/engine/js/global.js"></script>
 
   <!-- Retrive the theme asap to reduce the chance of flickering of the screen (sudden switch from light to dark) -->
   <!-- Call function "retrieveTheme" -->
