--- a/docsite/_sass/color_schemes/extra.scss
+++ b/docsite/_sass/color_schemes/extra.scss
@@ -19,6 +19,26 @@
     color: #7253ed;
 }
 
+.fa-file-zipper {
+    color: #7253ed;    
+}
+
+.fa-file-pdf {
+    color: #7253ed;       
+}
+
+.fa-php {
+    color: #7253ed;    
+}
+
+.fa-markdown {
+    color: #7253ed;    
+}
+
+.fa-markdown {
+    color: #7253ed;     
+}
+
 /*******************************/
 
 // For some still undefined reason that's not working
