--- a/docsite/_sass/color_schemes/extra.scss
+++ b/docsite/_sass/color_schemes/extra.scss
@@ -16,27 +16,27 @@
 }
 
 .brand-purple {
-    color: #7253ed;
+    color: #7253ed !important;
 }
 
 .fa-file-zipper {
-    color: #7253ed;    
+    color: #7253ed !important;
 }
 
 .fa-file-pdf {
-    color: #7253ed;       
+    color: #7253ed !important;       
 }
 
 .fa-php {
-    color: #7253ed;    
+    color: #7253ed !important;   
 }
 
 .fa-markdown {
-    color: #7253ed;    
+    color: #7253ed !important; 
 }
 
 .fa-markdown {
-    color: #7253ed;     
+    color: #7253ed !important; 
 }
 
 /*******************************/
