--- a/docsite/_sass/custom/custom.scss
+++ b/docsite/_sass/custom/custom.scss
@@ -1,34 +1,34 @@
-@import "./color_schemes/light";
+// // // // // // // @import "./color_schemes/light";
 
-.fa-file-zipper {
-    // Set color from class ".text-purple-000"
-    color: $text-purple-000;
-}
+// // // // // // // .fa-file-zipper {
+// // // // // // //     // Set color from class ".text-purple-000"
+// // // // // // //     color: $text-purple-000;
+// // // // // // // }
 
-.fa-file-pdf {
-    color: #7253ed;       
-}
+// // // // // // // .fa-file-pdf {
+// // // // // // //     color: #7253ed;       
+// // // // // // // }
 
-.fa-php {
-    color: #7253ed;   
-}
+// // // // // // // .fa-php {
+// // // // // // //     color: #7253ed;   
+// // // // // // // }
 
-.fa-markdown {
-    color: #7253ed; 
-}
+// // // // // // // .fa-markdown {
+// // // // // // //     color: #7253ed; 
+// // // // // // // }
 
-.fa-markdown {
-    color: #7253ed; 
-}
+// // // // // // // .fa-markdown {
+// // // // // // //     color: #7253ed; 
+// // // // // // // }
 
-/*******************************/
+// // // // // // // /*******************************/
 
-// For some still undefined reason that's not working
-// Update: yep it works, it just needs to be tagged: "!important"
-// // .label-epic {
-// //     background-color: #342D7E;
-// // }
+// // // // // // // // For some still undefined reason that's not working
+// // // // // // // // Update: yep it works, it just needs to be tagged: "!important"
+// // // // // // // // // .label-epic {
+// // // // // // // // //     background-color: #342D7E;
+// // // // // // // // // }
 
-.bg-purple-epic-custom01 {
-    background-color: #342D7E !important;
-}
+// // // // // // // .bg-purple-epic-custom01 {
+// // // // // // //     background-color: #342D7E !important;
+// // // // // // // }
