--- a/docsite/_sass/color_schemes/custom_light.scss
+++ b/docsite/_sass/color_schemes/custom_light.scss
@@ -1,4 +1,4 @@
-// // // // // // // // // // @import "MagicMirror/color_schemes/light";
+@import "./color_schemes/light";
 
 .fa-file-zipper {
     color: #7253ed; 
