--- a/docsite/engine/css/just-the-docs.scss
+++ b/docsite/engine/css/just-the-docs.scss
@@ -1,5 +1,5 @@
 ---
 ---
-{% include css/just-the-docs.scss.liquid color_scheme="custom_dark" %}
+{% include css/just-the-docs.scss.liquid color_scheme="dark" %}
 
 // Used to switch to the dark mode
