Working. See for future updates (regarding the site)

--- a/docsite/_sass/color_schemes/custom_light.scss
+++ b/docsite/_sass/color_schemes/custom_light.scss
@@ -1,6 +1,7 @@
 @import "./color_schemes/light";
 
 // #7253ed is: "purple-000"
+// Using native "purple-000" would be nice (future update)
 
 .fa-file-zipper {
     color: #7253ed; 
