--- a/docsite/_sass/color_schemes/custom_light.scss
+++ b/docsite/_sass/color_schemes/custom_light.scss
@@ -1,4 +1,4 @@
-@import "./color_schemes/light";
+@import "/MagicMirror-GBM/color_schemes/light";
 
 // #7253ed is: "purple-000"
 // Using native "purple-000" would be nice (future update)
