--- a/docsite/_includes/head_custom.html
+++ b/docsite/_includes/head_custom.html
@@ -6,7 +6,7 @@
 <!-- Retrive the theme asap to reduce the chance of flickering of the screen (sudden switch from light to dark) -->
 <!-- Call function "retrieveTheme" -->
 <script type="module">
-  // retrieveTheme();
+  retrieveTheme();
 </script>
 
 <!-- Font awesome kit -->
