--- a/docsite/_sass/color_schemes/green_custom_light.scss
+++ b/docsite/_sass/color_schemes/green_custom_light.scss
@@ -10,8 +10,8 @@
 // // $body-heading-color: $grey-dk-300 !default;
 // // $search-result-preview-color: $grey-dk-000 !default;
 // // $nav-child-link-color: $grey-dk-100 !default;
-$link-color: $green-000 !default;
-$btn-primary-color: $green-100 !default;
+$link-color: $green-000;
+$btn-primary-color: $green-100;
 // // $base-button-color: #f7f7f7 !default;
 
 // // // // #7253ed is: "purple-000"
