--- a/docsite/_sass/color_schemes/custom_light.scss
+++ b/docsite/_sass/color_schemes/custom_light.scss
@@ -3,24 +3,44 @@
 // #7253ed is: "purple-000"
 // Using native "purple-000" would be nice (future update)
 
+// // // .fa-file-zipper {
+// // //     color: #7253ed; 
+// // // }
+
+// // // .fa-file-pdf {
+// // //     color: #7253ed;       
+// // // }
+
+// // // .fa-php {
+// // //     color: #7253ed;   
+// // // }
+
+// // // .fa-markdown {
+// // //     color: #7253ed; 
+// // // }
+
+// // // .fa-database {
+// // //     color: #7253ed; 
+// // // }
+
 .fa-file-zipper {
-    color: #7253ed; 
+    color: $purple-000; 
 }
 
 .fa-file-pdf {
-    color: #7253ed;       
+    color: $purple-000;     
 }
 
 .fa-php {
-    color: #7253ed;   
+    color: $purple-000;   
 }
 
 .fa-markdown {
-    color: #7253ed; 
+    color: $purple-000; 
 }
 
 .fa-database {
-    color: #7253ed; 
+    color: $purple-000; 
 }
 
 /*******************************/
