--- a/docsite/_sass/custom/custom.scss
+++ b/docsite/_sass/custom/custom.scss
@@ -3,7 +3,8 @@
 // Fixing purple
 // Background in light mode
 // Title && Box Decoration in dark mode
-$fixpurple-000: #a895f4;
+// $fixpurple-000: #a895f4;
+$fixpurple-000: #72b136;
 
 // Title && Box Decoration in light mode
 // Background in dark mode
