--- a/docsite/_sass/color_schemes/custom_light.scss
+++ b/docsite/_sass/color_schemes/custom_light.scss
@@ -31,3 +31,9 @@
 .bg-purple-epic-custom01 {
     background-color: #342D7E !important;
 }
+
+/*******************************/
+
+.blockquote-title-fixer {
+    color: black;
+}
