--- a/docsite/_sass/color_schemes/custom_dark.scss
+++ b/docsite/_sass/color_schemes/custom_dark.scss
@@ -35,5 +35,5 @@
 /*******************************/
 
 .blockquote-title-fixer {
-    color: white !important;
+    color: $text-grey-lt-000 !important;
 }
