--- a/docsite/_sass/color_schemes/custom_light.scss
+++ b/docsite/_sass/color_schemes/custom_light.scss
@@ -35,5 +35,5 @@
 /*******************************/
 
 .blockquote-title-fixer {
-    color: black !important;
+    color: $text-grey-dk-300 !important;
 }
