--- a/docsite/_sass/custom/custom.scss
+++ b/docsite/_sass/custom/custom.scss
@@ -1,44 +1,48 @@
-// Fixing callout default colors problems
+/////////////////////////////////////////////////////////////
+// NOT IN USE
+/////////////////////////////////////////////////////////////
 
-// Fixing purple
-// Background in light mode
-// Title && Box Decoration in dark mode
-// $fixpurple-000: #a895f4;
-$fixpurple-000: #72b136;
+// // Fixing callout default colors problems
 
-// Title && Box Decoration in light mode
-// Background in dark mode
-$fixpurple-300: #381885;
+// // Fixing purple
+// // Background in light mode
+// // Title && Box Decoration in dark mode
+// // $fixpurple-000: #a895f4;
+// $fixpurple-000: #72b136;
 
-/////////////////////////////////////////////////////////////////
+// // Title && Box Decoration in light mode
+// // Background in dark mode
+// $fixpurple-300: #381885;
 
-// Fixing blue
-// Background in light mode
-// Title && Box Decoration in dark mode
-$fixblue-000: #8dbdfc;
+// /////////////////////////////////////////////////////////////////
 
-// Title && Box Decoration in light mode
-// Background in dark mode
-$fixblue-300: #183385;
+// // Fixing blue
+// // Background in light mode
+// // Title && Box Decoration in dark mode
+// $fixblue-000: #8dbdfc;
 
-/////////////////////////////////////////////////////////////////
+// // Title && Box Decoration in light mode
+// // Background in dark mode
+// $fixblue-300: #183385;
 
-// Fixing grey-dk
-// Background in light mode
-// Title && Box Decoration in dark mode
-$fixgrey-dk-000: #c5c4c5;
+// /////////////////////////////////////////////////////////////////
 
-// Title && Box Decoration in light mode
-// Background in dark mode
-$fixgrey-dk-300: #27262b;
+// // Fixing grey-dk
+// // Background in light mode
+// // Title && Box Decoration in dark mode
+// $fixgrey-dk-000: #c5c4c5;
 
-/////////////////////////////////////////////////////////////////
+// // Title && Box Decoration in light mode
+// // Background in dark mode
+// $fixgrey-dk-300: #27262b;
 
-// Fixing green
-// Background in light mode
-// Title && Box Decoration in dark mode
-$fixgreen-000: #9eeac8;
+// /////////////////////////////////////////////////////////////////
 
-// Title && Box Decoration in light mode
-// Background in dark mode
-$fixgreen-300: #026e57;
+// // Fixing green
+// // Background in light mode
+// // Title && Box Decoration in dark mode
+// $fixgreen-000: #9eeac8;
+
+// // Title && Box Decoration in light mode
+// // Background in dark mode
+// $fixgreen-300: #026e57;
