--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -88,7 +88,10 @@ layout: table_wrappers
         {% if collections_size > 1 or pages_top_size > 0 %}
         {% if collection_value.nav_fold == true %}
         <ul class="nav-list nav-category-list">
-          <li class="nav-list-item{% if page.collection == collection_key %} active{% endif %}">
+          <!-- Start Alter -->
+          <!-- Hardcoded always expanded navlist -->
+          <!-- <li class="nav-list-item{% if page.collection == collection_key %} active{% endif %}"> -->
+          <li class="nav-list-item active">
             {%- if collection.size > 0 -%}
             <a href="#" class="nav-list-expander"><svg viewBox="0 0 24 24">
                 <use xlink:href="#svg-arrow-right"></use>
