RepoLink: docsite assets updated

--- a/docsite/_includes/nav.html
+++ b/docsite/_includes/nav.html
@@ -160,7 +160,7 @@
   generating the nav links for a collection that includes `page`, AND `...` holds.
 {%- endcomment -%}
 
-<ul class="nav-list">
+<ul class="nav-list active">
 {%- for node in first_level_pages -%}
   <!-- Start Alter -->
   <!-- Navlist will always be expanded, even if the interested page is excluded from it -->
