RepoLink: docsite assets updated

--- a/docsite/_includes/nav.html
+++ b/docsite/_includes/nav.html
@@ -165,8 +165,9 @@
   <!-- Start Alter -->
   <!-- Navlist will always be expanded, even if the interested page is excluded from it -->
   <!-- {%- unless node.nav_exclude -%} -->
+  <!-- <li class="nav-list-item{% if page.collection == include.key and page.url == node.url or page.grand_parent == node.title or page.parent == node.title and page.grand_parent == nil %} active{% endif %}"> -->
   <!-- End Alter -->
-  <li class="nav-list-item{% if page.collection == include.key and page.url == node.url or page.grand_parent == node.title or page.parent == node.title and page.grand_parent == nil %} active{% endif %}">
+  <li class="nav-list-item active">
     {%- if node.has_children -%}
       <a href="#" class="nav-list-expander" aria-label="toggle links in {{ node.title }} category">
         <svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg>
