--- a/docsite/_includes/head_custom.html
+++ b/docsite/_includes/head_custom.html
@@ -1,7 +1,7 @@
 <!-- Importing javascript "global.js" file -->
 <!-- src="/" is "andreagrandieri.github.io" -->
 <!-- src="./" is the current folder path. Note that you can level up (walk backwards) using "../" -->
-<script type="module" src="/MagicMirror-GBM/engine/js/global.js"></script>
+<script type="module" src="./../engine/js/global.js"></script>
 
 <!-- Retrive the theme asap to reduce the chance of flickering of the screen (sudden switch from light to dark) -->
 <!-- Call function "retrieveTheme" -->
