--- a/docsite/_includes/nav_footer_custom.html
+++ b/docsite/_includes/nav_footer_custom.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">    
-    Powered by grn::deploy::webstatic
+    Powered by <b>grn::deploy::webstatic</b>
     <br><br>
     This site uses <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
 </footer>
