--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -165,7 +165,7 @@ layout: table_wrappers
         {% endif %}
         <!-- Start Alter -->
         <!-- Even if there are no auxlinks, the hardcoded ones will be inserted -->
-        {% if !site.aux_links %}
+        {% unless site.aux_links %}
         <nav aria-label="Auxiliary" class="aux-nav">
           <!-- Start Alter -->
           <!-- Hardcoded aux link to ignore the option "aux_links_new_tab"-->
@@ -176,7 +176,7 @@ layout: table_wrappers
             <!-- End Alter -->
           </ul>
         </nav>
-        {% endif %}
+        {% endunless %}
         <!-- End Alter -->
       </div>
       <div id="main-content-wrap" class="main-content-wrap">
