--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -264,6 +264,14 @@ layout: table_wrappers
       window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
     </script>
     {% endif %}
+
+    <!-- Start Alter -->
+    {% for link in site.aux_links %}
+    <p>{{ link[0] }}</p>
+    <p>{{ link[1] }}</p>
+    <p>{{ link[2] }}</p>
+    {% endfor %}
+    <!-- End Alter -->
   </body>
 
 </html>
