--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -145,22 +145,25 @@ layout: table_wrappers
         {% include header_custom.html %}
         <!-- Start Alter -->
         <!-- Now it is able to specify the "new tab option" specifically for single link -->
+        <!-- Also using: https://stackoverflow.com/questions/38295128/access-name-of-yaml-items-pointer-reference-in-liquid-template -->
         {% if site.aux_links %}
         <nav aria-label="Auxiliary" class="aux-nav">
           <ul class="aux-nav-list">
             {% for link in site.aux_links %}
+            {% for internalbrowser in link %}
             <li class="aux-nav-list-item">
-              <a href="{{ link[1] }}" class="site-button" {% if link.last %} target="_blank" rel="noopener noreferrer"
+              <a href="{{ internalbrowser[1] }}" class="site-button" {% if internalbrowser[2] %} target="_blank" rel="noopener noreferrer"
                 {% endif %}>
-                {{ link.first }}
+                {{ internalbrowser[0] }}
               </a>
               <!-- <a href="{{ link.last }}" class="site-button" {% if site.aux_links_new_tab %} target="_blank"
                 rel="noopener noreferrer" {% endif %}>
                 {{ link.first }}
               </a> -->
-          <!-- End Alter -->
             </li>
             {% endfor %}
+            {% endfor %}
+        <!-- End Alter -->
           </ul>
         </nav>
         {% endif %}
@@ -264,18 +267,6 @@ layout: table_wrappers
       window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
     </script>
     {% endif %}
-
-    <!-- Start Alter -->
-    <!-- Using: https://stackoverflow.com/questions/38295128/access-name-of-yaml-items-pointer-reference-in-liquid-template -->
-    {% for link in site.aux_links %}
-    {% for browser in link %}
-    <script>console.log('{{ browser[0] }}');</script>
-    <script>console.log('{{ browser[1] }}');</script>
-    <script>console.log('{{ browser[2] }}');</script>
-    <script>console.log('{{ browser[3] }}');</script>
-    {% endfor %}
-    {% endfor %}
-    <!-- End Alter -->
   </body>
 
 </html>
