--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -269,9 +269,9 @@ layout: table_wrappers
       {% for internalbrowser in link %}
       <script>console.log('This is link: {{ link[0] }}');</script>
       <script>console.log('Whole-block content: {{ link[1] }}');</script>
-      <script>console.log('internalbrowser[0]');</script>
-      <script>console.log('internalbrowser[1]');</script>
-      <script>console.log('internalbrowser[2]');</script>
+      <script>console.log('{{ internalbrowser[0] }}');</script>
+      <script>console.log('{{ internalbrowser[1] }}');</script>
+      <script>console.log('{{ internalbrowser[2] }}');</script>
       {% endfor %}
     {% endfor %}
     <!-- End Alter -->
