--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -266,12 +266,14 @@ layout: table_wrappers
 
     <!-- Start Alter -->
     {% for link in site.aux_links %}
-      {% for internalbrowser in link %}
-      <script>console.log('This is link: {{ link[0] }}');</script>
-      <script>console.log('Whole-block content: {{ link[1] }}');</script>
-      <script>console.log('{{ internalbrowser[0] }}');</script>
-      <script>console.log('{{ internalbrowser[1] }}');</script>
-      <script>console.log('{{ internalbrowser[2] }}');</script>
+      {% for firstOrderBrowser in link %}
+        {% for secondOrderBrowser in firstOrderBrowser %}
+        <script>console.log('This is link: {{ firstOrderBrowser[0] }}');</script>
+        <script>console.log('Whole-block content: {{ firstOrderBrowser[1] }}');</script>
+        <script>console.log('{{ secondOrderBrowser[0] }}');</script>
+        <script>console.log('{{ secondOrderBrowser[1] }}');</script>
+        <script>console.log('{{ secondOrderBrowser[2] }}');</script>
+        {% endfor %}
       {% endfor %}
     {% endfor %}
     <!-- End Alter -->
