--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -267,7 +267,8 @@ layout: table_wrappers
     <!-- Start Alter -->
     {% for link in site.aux_links %}
       {% for firstOrderBrowser in link %}
-        {% for secondOrderBrowser in firstOrderBrowser %}
+        <!-- secondOrderBrowser must only be run on firstOrderBrowser pointing: "whole-block content" -->
+        {% for secondOrderBrowser in firstOrderBrowser[1] %}
         <script>console.log('This is link: {{ firstOrderBrowser[0] }}');</script>
         <script>console.log('Whole-block content: {{ firstOrderBrowser[1] }}');</script>
         <script>console.log('{{ secondOrderBrowser[0] }}');</script>
