RepoLink: docsite assets updated

--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -266,15 +266,13 @@ layout: table_wrappers
 
     <!-- Start Alter -->
     {% for link in site.aux_links %}
-      {% for firstOrderBrowser in link %}
-      <script>console.log('This is link: {{ firstOrderBrowser[0] }}');</script>
-      <script>console.log('Whole-block content: {{ firstOrderBrowser[1] }}');</script>
-        <!-- secondOrderBrowser must only be run on firstOrderBrowser pointing: "whole-block content" -->
-        {% for secondOrderBrowser in firstOrderBrowser[1] %}
-        <script>console.log('{{ secondOrderBrowser[0] }}');</script>
-        <script>console.log('{{ secondOrderBrowser[1] }}');</script>
-        <script>console.log('{{ secondOrderBrowser[2] }}');</script>
-        {% endfor %}
+    <script>console.log('This is link: {{ link[0] }}');</script>
+    <script>console.log('Whole-block content: {{ link[1] }}');</script>
+        <!-- firstOrderBrowser must only be run on link pointing: "whole-block content" -->
+      {% for firstOrderBrowser in link[1] %}
+      <script>console.log('{{ firstOrderBrowser[0] }}');</script>
+      <script>console.log('{{ firstOrderBrowser[1] }}');</script>
+      <script>console.log('{{ firstOrderBrowser[2] }}');</script>
       {% endfor %}
     {% endfor %}
     <!-- End Alter -->
