--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -269,7 +269,7 @@ layout: table_wrappers
     <script>console.log('This is link: {{ link[0] }}');</script>
     <script>console.log('Whole-block content: {{ link[1] }}');</script>
         <!-- firstOrderBrowser must only be run on link pointing: "whole-block content" -->
-      {% for firstOrderBrowser in link[1] %}
+      {% for firstOrderBrowser in link %}
       <script>console.log('{{ firstOrderBrowser[0] }}');</script>
       <script>console.log('{{ firstOrderBrowser[1] }}');</script>
       <script>console.log('{{ firstOrderBrowser[2] }}');</script>
