--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -265,16 +265,7 @@ layout: table_wrappers
     {% endif %}
 
     <!-- Start Alter -->
-    {% for link in site.aux_links %}
-    <script>console.log('This is link: {{ link[0] }}');</script>
-    <script>console.log('Whole-block content: {{ link[1] }}');</script>
-        <!-- firstOrderBrowser must only be run on link pointing: "whole-block content" -->
-      {% for firstOrderBrowser in link %}
-      <script>console.log('{{ firstOrderBrowser[0] }}');</script>
-      <script>console.log('{{ firstOrderBrowser[1] }}');</script>
-      <script>console.log('{{ firstOrderBrowser[2] }}');</script>
-      {% endfor %}
-    {% endfor %}
+    <script>console.log('{{ site.aux_links }}');</script>
     <!-- End Alter -->
 
 
