RepoLink: docsite assets updated

--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -270,11 +270,16 @@ layout: table_wrappers
 
     <!-- Start Alter -->
     {% for link in site.aux_links %}
-    <script>console.log('{{ link }}');</script>  
+    <!-- <script>console.log('{{ link }}');</script>  
     <script>console.log('{{ link[0] }}');</script>  
-    <script>console.log('{{ link[1] }}');</script>  
-    <script>console.log('{{ link.first }}');</script>  
-    <script>console.log('{{ link.last }}');</script>  
+    <script>console.log('{{ link[1] }}');</script>   -->
+    <!-- <script>console.log('{{ link.first }}');</script>   -->
+    <!-- <script>console.log('{{ link.last }}');</script>   -->
+
+      {% for firstOrderBrowser in link %}
+      <script>console.log('{{ firstOrderBrowser }}');</script>
+      {% endfor %}
+
     {% endfor %}
     <!-- End Alter -->
 
